Update SendNotificationServiceTest.java